# django-pytest-elasticsearch-example

./: Dockerfile  LICENSE  README.md  docker-compose.yml  manage.py  pyproject.toml  pytest.ini
.github/workflows/: test.yml
example/: elasticsearch.py  settings.py
tests/: conftest.py  test_elasticsearch.py
