[tool.poetry]
name = "django-pytest-elasticsearch-example"
version = "0.1.0"
description = ""
authors = ["Yanglin Zhao <yz1876@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
django = "^3.0.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
