[tool.poetry]
name = "django-pytest-elasticsearch-example"
version = "0.1.0"
description = ""
authors = ["Yanglin Zhao <yz1876@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
django = "^3.0.8"
elasticsearch = "^7.8.0"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
pytest = "^5.4.3"
pytest-django = "^3.9.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
